--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# MySQL properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=301184
+
+# Hibernate properties
+spring.jpa.properties.hibernate.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.show_sql=true
+
+spring.mvc.hiddenmethod.filter.enabled=true
+
 
