--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=301184
 
 # Hibernate properties
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.show_sql=true
 
